--- a/Pub Crawler/Base.lproj/Main.storyboard
+++ b/Pub Crawler/Base.lproj/Main.storyboard
@@ -19,7 +19,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="52c-Jr-0Wu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1279" y="361"/>
+            <point key="canvasLocation" x="-1623" y="361"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="4H0-pg-gMc">
+            <objects>
+                <viewController id="ITJ-Ks-Utm" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bSB-m8-OQ6"/>
+                        <viewControllerLayoutGuide type="bottom" id="7rh-QK-hIY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sMr-9x-MsI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xTS-uO-Zyw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1001" y="-184"/>
         </scene>
         <!--Pub Crawler-->
         <scene sceneID="tne-QT-ifu">
